estructura del proyecto

--- a/views/login.html
+++ b/views/login.html
@@ -12,14 +12,14 @@
     <div class="login-box">
       <!-- Panel izquierdo -->
       <div class="left-panel">
-        <img src="iconos/acceso-de-usuario.png" alt="Icono nube">
+        <img src="/assets/icons/acceso-de-usuario.png" alt="Icono nube">
         <h1>softVision</h1>
         <p>Sistema Integral Académico en la Nube</p>
       </div>
 
       <!-- Panel derecho -->
       <div class="right-panel">
-        <img src="iconos/acceso-de-usuario.png" alt="Seguridad">
+        <img src="/assets/icons/acceso-de-usuario.png" alt="Seguridad">
         <h2>SOFTVISION</h2>
         
 
@@ -30,7 +30,7 @@
         <div class="input-group">
           <input type="password" placeholder="Contraseña">
         </div>
-        <a href="una_pagina.html"><button class="login-button">Iniciar sesión</button></a>
+        <a href="/views/dashboard.html"><button class="login-button">Iniciar sesión</button></a>
         
 
         <div class="forgot-password">
