--- a/css/login.css
+++ b/css/login.css
@@ -1,7 +1,7 @@
 body {
       margin: 0;
       font-family: Arial, sans-serif;
-      background: url('imagenes/imagen4.png') no-repeat center center fixed;
+      background: url('/assets/imagen/imagen4.png') no-repeat center center fixed;
       background-size: cover;
     }
 
