--- a/views/dashboard.html
+++ b/views/dashboard.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>SOFTVISION - Dashboard Estudiante</title>
-    <link rel="stylesheet" href="una_pagina.css" />
+    <link rel="stylesheet" href="/css/dashboard.css" />
   </head>
   <body>
     <div class="container">
