--- a/views/asignaturas.html
+++ b/views/asignaturas.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Asignaturas</title>
-    <link rel="stylesheet" href="/css/asignaturas.css" />
+    <link rel="stylesheet" href="../css/asignaturas.css" />
   </head>
   <body>
     <header>
       <nav class="barra_navegacion">
         <div class="foto_estudiante">
-          <img src="/assets/imagen/Brallan.jpeg" alt="Imagen del estudiante" />
+          <img src="../assets/imagen/Brallan.jpeg" alt="Imagen del estudiante" />
         </div>
         <div class="nombre_estudiante">
           <h3>Brallan De Jesus Echeverria Castro</h3>
