--- a/views/calendario.html
+++ b/views/calendario.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SOFTVISION - Calendario</title>
-    <link rel="stylesheet" href="dashboard_calendario.css">
+    <link rel="stylesheet" href="../css/calendario.css">
 </head>
 <body>
     <div class="container">
@@ -40,10 +40,7 @@
                     Anuncios
                 </a>
                 
-                <a href="#" class="nav-item">
-                    <span class="icon">💬</span>
-                    Mensajes
-                </a>
+                
                 <a href="#" class="nav-item">
                     <span class="icon">👤</span>
                     Perfil
@@ -58,10 +55,13 @@
             <header class="header">
                 <h2>Events</h2>
                 <div class="header-right">
-                    <div class="search-box">
+
+                    <!-- <div class="search-box">
                         <input type="text" placeholder="Search here...">
                         <span class="search-icon">🔍</span>
-                    </div>
+                    </div> -->
+
+                    
                     <div class="user-avatar">YO</div>
                     <div class="notifications">
                         <span class="notification-icon">🔔</span>
