--- a/views/login.html
+++ b/views/login.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Login - Sian365</title>
-  <link rel="stylesheet" href="login.css">
+  <title>  SOFTVISION - login</title>
+  <link rel="stylesheet" href="../css/login.css">
  
 </head>
 <body>
@@ -12,14 +12,14 @@
     <div class="login-box">
       <!-- Panel izquierdo -->
       <div class="left-panel">
-        <img src="/assets/icons/acceso-de-usuario.png" alt="Icono nube">
+        <img src="../assets/icons/acceso-de-usuario.png" alt="Icono nube">
         <h1>softVision</h1>
         <p>Sistema Integral Académico en la Nube</p>
       </div>
 
       <!-- Panel derecho -->
       <div class="right-panel">
-        <img src="/assets/icons/acceso-de-usuario.png" alt="Seguridad">
+        <img src="../assets/icons/acceso-de-usuario.png" alt="Seguridad">
         <h2>SOFTVISION</h2>
         
 
@@ -30,7 +30,7 @@
         <div class="input-group">
           <input type="password" placeholder="Contraseña">
         </div>
-        <a href="/views/dashboard.html"><button class="login-button">Iniciar sesión</button></a>
+        <a href="../views/dashboard.html"><button class="login-button">Iniciar sesión</button></a>
         
 
         <div class="forgot-password">
