--- a/views/vista_principal.html
+++ b/views/vista_principal.html
@@ -3,13 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>SoftVision</title>
-    <link rel="stylesheet" href="/css/vista_principal.css" />
+    <title>SoftVision - principal</title>
+    <link rel="stylesheet" href="../css/vista_principal.css" />
   </head>
   <body>
     <nav class="barra-navegacion">
       <div class="logo-escuela">SoftVision</div>
-      <a href="/views/login.html"><button class="boton-inicio-sesion">Iniciar sesión</button></a>
+      <a href="../views/login.html"><button class="boton-inicio-sesion">Iniciar sesión</button></a>
     </nav>
 
     <header class="seccion-principal">
@@ -21,15 +21,15 @@
 
     <section class="seccion-estadisticas">
       <div class="tarjeta-estadistica">
-        <img src="/assets/icons/profesores.png" />
+        <img src="../assets/icons/profesores.png" />
         <p>Docentes</p>
       </div>
       <div class="tarjeta-estadistica">
-        <img src="/assets/icons/administrator.png" />
+        <img src="../assets/icons/administrator.png" />
         <p>Administracion</p>
       </div>
       <div class="tarjeta-estadistica">
-        <img src="/assets/icons/CURSOS.png" />
+        <img src="../assets/icons/CURSOS.png" />
         <p>Cursos</p>
       </div>
     </section>
