ajustes en las vistas

--- a/views/asignaturas.html
+++ b/views/asignaturas.html
@@ -13,7 +13,7 @@
           <img src="../assets/imagen/Brallan.jpeg" alt="Imagen del estudiante" />
         </div>
         <div class="nombre_estudiante">
-          <h3>Brallan De Jesus Echeverria Castro</h3>
+          <h3>Brallan Echeverria Castro</h3>
         </div>
         <div class="perfil_cierre_sesion">
           <p>perfil | cerrar sesion</p>
@@ -23,12 +23,13 @@
         <div class="logo"><p>SOFTVISION</div></p>
         <div class="menu">
           <ul class="lista_menu">
-            <li class="opciones1">Asignaturas</li>
-              <li class="opciones">Tareas</li>
-              <li class="opciones">Calificaciones</li>
-              <li class="opciones">Horario</li>
-              <li class="opciones">Anuncios</li>
-              <li class="opciones">Encuestas</li>
+            <li class="opciones">Dashboard</li>
+            <li class="opciones">Mis Cursos</li>
+            <li class="opciones1">Calificaciones</li>
+            <li class="opciones">Horario</li>
+            <li class="opciones">Tareas</li> 
+            <li class="opciones">Anuncios</li>
+            <li class="opciones">Perfil</li>
           </ul>
         </div>
       </nav>
