--- a/css/asignaturas.css
+++ b/css/asignaturas.css
@@ -32,12 +32,14 @@ body{
     height: 35px;
     border: solid 1px black;
     border-radius: 100%;
+    margin-right: 10%;
 }
 
 .nombre_estudiante{
     position: relative;
     bottom: 27px;
-    margin-right: 36px;
+    margin-right: 15%;
+    padding-top: 13px;
     
 }
 
